# labs_ui

./: CMakeLists.txt  README.md  includes.h  lex1.cpp  lex1_p2.cpp  lex1_p2.h  lex1_p3.cpp  lex1_p3.h  lhistcreator2d.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
lab1_src/: etc.cpp  etc.h  lex1.cpp  lex1.h  lex1_p2.cpp  lex1_p2.h  lex1_p3.cpp  lex1_p3.h  lhistcreator2d.cpp  lhistcreator2d.h
lab2_src/: lex2.cpp  lex2.h
